--- a/battle-gui/pom.xml
+++ b/battle-gui/pom.xml
@@ -57,5 +57,10 @@
             <artifactId>javafx-graphics</artifactId>
             <version>11-ea+25</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11-ea+25</version>
+        </dependency>
     </dependencies>
 </project>
